--- a/.github/workflows/sonarqube-scanner.yml
+++ b/.github/workflows/sonarqube-scanner.yml
@@ -18,6 +18,6 @@ jobs:
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.sonarcloud  }}
+        SONAR_TOKEN: ${{ secrets.sonarcloud_token }}
 
