--- a/.github/workflows/sonarqube-scanner.yml
+++ b/.github/workflows/sonarqube-scanner.yml
@@ -1,10 +1,12 @@
+name: Sonarcloud-scanner
+
 on:
   push:
     branches:
       - master
   pull_request:
       types: [opened, synchronize, reopened]
-name: Main Workflow
+
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
