--- a/.github/workflows/sonarqube-scanner.yml
+++ b/.github/workflows/sonarqube-scanner.yml
@@ -16,6 +16,6 @@ jobs:
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
-        GITHUB_TOKEN: ${{ secrets.sonarcloud  }}
+        GITHUB_TOKEN: ${{ secrets.SONARCLOUD  }}
         SONAR_TOKEN: ${{ secrets.SONARCLOUDTOKEN }}
 
