--- a/.github/workflows/sonarqube-scanner.yml
+++ b/.github/workflows/sonarqube-scanner.yml
@@ -1,21 +1,20 @@
-name: Sonarcloud-scanner
-
-on:
-  push:
-    branches:
-      - master
-
+on: push
+name: Main Workflow
 jobs:
-  sonarcloud:
+  build:
+    name: Build, Test and Analyze
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
-        fetch-depth: 0
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.SONARCLOUD  }}
-        SONAR_TOKEN: ${{ secrets.SONARCLOUDTOKEN }}
-
+      - name: Setup Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: '1.13'
+      - name: Clone Repository
+        uses: actions/checkout@master
+      - name: Build and Test
+        run: make test
+      - name: Analyze with SonarCloud
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
