--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,4 @@ sonar.login=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
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
+sonar.sourceEncoding=UTF-8
