--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
 sonar.organization=gastonbarbaccia
 sonar.projectKey=admin_laravel
-sonar.login=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
-# relative paths to source directories. More details and properties are described
-# in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
+sonar.projectName=admin_laravel
+sonar.projectVersion=1.0.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
