--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,12 @@
+sonar.projectKey=gastonbarbaccia_admin_laravel
 sonar.organization=gastonbarbaccia
-sonar.projectKey=admin_laravel
-sonar.projectName=admin_laravel
-sonar.projectVersion=1.0.0
-sonar.sources=.
-sonar.sourceEncoding=UTF-8
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=admin_laravel
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
